# epifly

./: .dockerignore  .env.example  .env.test  .env.zitadel  .gitignore  .token  .token.test  .tool-versions  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  biome.json  deny.toml  docker-compose.yml  eslint.config.js  justfile  package.json  paln.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  start.sh  stop.sh  tsconfig.base.json  turbo.json  verify.md
apps/backend/: Cargo.toml  Dockerfile  start-verify.sh  start.sh  stop.sh
apps/backend/capabilities/code-project/: capability.toml
apps/backend/capabilities/compose-email/: capability.toml
apps/backend/capabilities/compose-report-json/: capability.toml
apps/backend/capabilities/compose-report-md/: capability.toml
apps/backend/capabilities/contract-processing/: capability.toml
apps/backend/capabilities/convert-audio-to-text/: capability.toml
apps/backend/capabilities/convert-pdf-to-md/: capability.toml
apps/backend/capabilities/extract-fields-cv/: capability.toml
apps/backend/capabilities/extract-fields-incident/: capability.toml
apps/backend/capabilities/extract-fields-medical-claim/: capability.toml
apps/backend/capabilities/extract-ocr-tesseract/: capability.toml
apps/backend/capabilities/extract-ocr-vision/: capability.toml
apps/backend/capabilities/file-storage/: capability.toml
apps/backend/capabilities/google-workspace/: capability.toml
apps/backend/capabilities/invoice-processing/: capability.toml
apps/backend/capabilities/ocr-service/: capability.toml
apps/backend/capabilities/plan-on-upload/: capability.toml
apps/backend/capabilities/plan-orchestrate/: capability.toml
apps/backend/capabilities/runtime-echo/: capability.toml
apps/backend/capabilities/sense-classify-document/: capability.toml
apps/backend/capabilities/sense-mime/: capability.toml
apps/backend/capabilities/storage-bulk-delete/: capability.toml
apps/backend/capabilities/storage-create-folder/: capability.toml
apps/backend/capabilities/storage-delete/: capability.toml
apps/backend/capabilities/storage-ensure-date-folder/: capability.toml
apps/backend/capabilities/storage-ensure-folder/: capability.toml
apps/backend/capabilities/storage-find-by-name/: capability.toml
apps/backend/capabilities/storage-fs/: capability.toml
apps/backend/capabilities/storage-list-folders/: capability.toml
apps/backend/capabilities/storage-move/: capability.toml
apps/backend/capabilities/storage-put/: capability.toml
apps/backend/capabilities/storage-read-text/: capability.toml
apps/backend/capabilities/storage-show-tree/: capability.toml
apps/backend/capabilities/storage-tag/: capability.toml
apps/backend/capabilities/storage-workspace/: capability.toml
apps/backend/capabilities/storage-workspace-move/: capability.toml
apps/backend/capabilities/storage-write-text/: capability.toml
apps/backend/capabilities/template-wasm/: capability.toml
apps/backend/capabilities/transcribe-video/: capability.toml
apps/backend/crates/agent-core/: Cargo.toml  build.rs
apps/backend/crates/agent-core/src/: lib.rs  model_catalog.rs  workspace_ops.rs
apps/backend/crates/agent-core/tests/: artifact_path_prefix.rs
apps/backend/crates/agent-gateway/: Cargo.toml  build.rs
apps/backend/crates/agent-gateway/src/: lib.rs  main.rs  metrics.rs  state.rs
apps/backend/crates/agent-gateway/templates/: app.html  login.html
apps/backend/crates/agent-gateway/tests/: anthropic_sse_mock.rs  capability_routing.rs  device_token_e2e.rs  forced_capability.rs  identity_zitadel.rs  lexical_prefilter.rs  plan_clamp.rs  presign_path_confusion.rs  read_before_write.rs  remote_mcp_e2e.rs  routing_quality.rs  shell_control_ws.rs  tenant_isolation.rs  threads_list.rs
apps/backend/crates/billing-core/: Cargo.toml
apps/backend/crates/billing-core/src/: catalog.rs  error.rs  events.rs  lago.rs  lib.rs  metrics.rs  (+3 more)
apps/backend/crates/common/: Cargo.toml
apps/backend/crates/jobs/: Cargo.toml
apps/backend/crates/rustfs-admin/: Cargo.toml
apps/backend/evals/: Cargo.toml
apps/backend/evals/datasets/: invoice.jsonl
apps/backend/evals/src/: main.rs
apps/backend/evals/suites/: invoice.jsonl  ocr.jsonl  smoke.jsonl
apps/backend/scripts/: docker-verify.sh
apps/backend/xtask/: Cargo.toml
apps/backend/xtask/src/: main.rs
apps/browser-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/browser-shell/src-tauri/capabilities/: ios-capability.json  main-capability.json
apps/browser-shell/src-tauri/icons/: icon.icns
apps/browser-shell/src-tauri/macos/: entitlements.plist
apps/browser-shell/src-tauri/src/: chat_stream.rs  device_auth.rs  keychain.rs  lib.rs  main.rs  oidc_auth.rs  recorder.rs  registration.rs  tabs.rs  telemetry.rs
apps/native/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/native/src-tauri/src/: lib.rs  main.rs
crates/agent-gateway/: Cargo.toml
crates/agent-gateway/assets/: app.js  style.css
crates/agent-gateway/assets/css/: style.css
crates/agent-gateway/assets/js/: app.js  workspace.js
crates/agent-gateway/src/: auth.rs  main.rs  state.rs
crates/agent-gateway/src/mw/: mod.rs  rate_limit.rs  tenant.rs  trace.rs
crates/agent-gateway/src/routes/: agent.rs  audit.rs  capabilities.rs  chat.rs  files.rs  health.rs  mcp.rs  mod.rs  search.rs  threads.rs  workspaces.rs
crates/agent-gateway/src/ui/: routes.rs  session.rs  view.rs
crates/agent-gateway/templates/: app.html  login.html
crates/agent-gateway/templates/partials/: composer.html
crates/agent-gateway/templates/shared/: head.html
crates/invoice-demo/: Cargo.toml
crates/invoice-demo/src/: main.rs
evals/: Cargo.toml
evals/datasets/: ocr_quality.jsonl  threads.jsonl
evals/src/: config.rs  main.rs  report.rs
evals/src/runners/: invoice.rs  mod.rs  ocr_quality.rs  threads.rs
evals/src/scorers/: mod.rs
examples/invoice-cli/: Cargo.toml
examples/invoice-cli/src/: main.rs
(+747 files in other folders)
