[package]
name        = "agent-gateway"
description = "OpenAI-compatible HTTP gateway — streaming /v1/chat/completions, auth, rate limiting"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "agent-gateway"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
agent-core = { path = "../agent-core" }
tokio.workspace       = true
axum.workspace        = true
tower.workspace       = true
tower-http.workspace  = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
uuid.workspace        = true
futures.workspace     = true
tokio-stream.workspace = true
rig-core.workspace    = true
