[package]
name        = "invoice-cli"
description = "End-to-end invoice extraction demo using Rig + Claude vision"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "invoice-cli"
path = "src/main.rs"

[dependencies]
common     = { path = "../../crates/common" }
agent-core = { path = "../../crates/agent-core" }
tokio.workspace      = true
rig-core.workspace   = true
serde.workspace      = true
serde_json.workspace = true
schemars.workspace   = true
base64.workspace     = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
clap.workspace       = true
colored.workspace    = true
