[package]
name        = "evals"
description = "Evaluation framework — datasets, runners, scorers, LLM-as-Judge"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "evals"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
reqwest.workspace    = true
anyhow.workspace     = true
tracing-subscriber.workspace = true
clap.workspace       = true
