[package]
name    = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
colored    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
glob       = { workspace = true }
redb       = { workspace = true }
agent-core = { path = "../crates/agent-core" }
