[package]
name    = "browser-shell"
version = "0.4.0"
edition = "2024"

[lib]
name             = "browser_shell_lib"
crate-type       = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "browser-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["unstable"] }
tauri-plugin-dialog     = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-http       = "2"

common    = { path = "../../backend/crates/common" }

serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
ulid       = { workspace = true }
chrono     = { workspace = true }
blake3     = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
base64     = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
updater         = ["tauri-plugin-updater"]
