[package]
name    = "browser-shell"
version = "0.4.0"
edition = "2024"
license = "MIT"

[lib]
name             = "browser_shell_lib"
crate-type       = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "browser-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["unstable"] }
tauri-plugin-dialog     = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-http       = "2"
tauri-plugin-haptics    = "2"

common    = { path = "../../backend/crates/common" }

serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
ulid       = { workspace = true }
chrono     = { workspace = true }
blake3     = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
base64     = { workspace = true }
futures-util = { version = "0.3" }
open         = "5"
sha2         = { workspace = true }
rand         = "0.8"
urlencoding  = "2"
# WebDriver automation for E2E tests on macOS.
# Debug/e2e gating happens in Rust cfgs and the optional `e2e` feature.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-webdriver-automation = { version = "0.1.3", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[features]
custom-protocol = ["tauri/custom-protocol"]
# e2e enables the macOS WebDriver automation server for integration testing.
# Only effective in debug builds on macOS.
e2e             = ["dep:tauri-plugin-webdriver-automation"]

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
