[package]
name = "epifly-app"
version.workspace = true
description = "Epifly native app"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "epifly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
