[package]
name = "epifly-app"
version.workspace = true
description = "Epifly native app"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "epifly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
oauth2 = "5"
keyring = "3"
tokio = { version = "1", features = ["rt", "sync", "time"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
tracing = "0.1"
