[package]
name        = "agent-core"
description = "Agent runtime, capability registry, Rig pipeline integration, Qdrant embedding"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
common        = { path = "../common" }
tokio.workspace       = true
rig-core.workspace    = true
rig-qdrant.workspace  = true
qdrant-client.workspace = true
serde.workspace       = true
serde_json.workspace  = true
toml.workspace        = true
schemars.workspace    = true
base64.workspace      = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace               = true
opentelemetry.workspace         = true
tracing-opentelemetry.workspace = true
uuid.workspace        = true
ulid.workspace        = true
sha2.workspace        = true
chrono.workspace      = true
async-trait.workspace = true
futures.workspace     = true
bon.workspace         = true
wasmtime.workspace    = true
wasmtime-wasi.workspace = true
reqwest.workspace     = true
object_store.workspace = true
bytes.workspace        = true
