[package]
name        = "agent-core"
description = "Agent runtime, capability registry, Rig pipeline integration, redb metadata store, Qdrant vector search"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
common        = { path = "../common" }
rustfs-admin  = { path = "../rustfs-admin" }
aes-gcm.workspace = true
tokio.workspace       = true
rig-core.workspace    = true
redb.workspace        = true
postcard.workspace    = true
qdrant-client.workspace = true
serde.workspace       = true
serde_json.workspace  = true
toml.workspace        = true
schemars.workspace    = true
base64.workspace      = true
jsonwebtoken.workspace = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace               = true
opentelemetry.workspace         = true
tracing-opentelemetry.workspace = true
uuid.workspace        = true
ulid.workspace        = true
chrono.workspace      = true
async-trait.workspace = true
futures.workspace     = true
bon.workspace         = true
wasmtime.workspace    = true
wasmtime-wasi.workspace = true
reqwest.workspace     = true
object_store.workspace = true
bytes.workspace        = true
async-recursion        = { version = "1" }
url                    = { version = "2" }
moka.workspace         = true
blake3.workspace       = true
notify.workspace       = true

[dev-dependencies]
proptest.workspace = true

[features]
default          = []
local-embeddings = ["dep:fastembed"]

[dependencies.fastembed]
workspace = true
optional  = true
