[package]
name        = "agent-gateway"
description = "OpenAI-compatible HTTP gateway — streaming /v1/chat/completions, auth, rate limiting"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "agent-gateway"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
agent-core = { path = "../agent-core" }
jobs       = { path = "../jobs" }
tokio.workspace       = true
axum.workspace        = true
tower.workspace       = true
tower-http.workspace  = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace              = true
tracing-subscriber.workspace   = true
opentelemetry.workspace          = true
opentelemetry_sdk.workspace      = true
opentelemetry-prometheus.workspace = true
prometheus.workspace             = true
tracing-opentelemetry.workspace  = true
ulid.workspace                 = true
jsonwebtoken.workspace = true
uuid.workspace        = true
futures.workspace     = true
tokio-stream.workspace = true
rig-core.workspace    = true
redb.workspace        = true
sha2.workspace        = true
hmac.workspace        = true
base64.workspace      = true
blake3.workspace      = true
object_store.workspace = true
chrono.workspace      = true
axum-extra            = { version = "0.10", features = ["cookie", "multipart"] }
async-trait.workspace = true
time                  = "0.3"
utoipa.workspace      = true
utoipa-swagger-ui.workspace = true
rand                  = { version = "0.8" }
hex                   = { version = "0.4" }

[dev-dependencies]
wiremock.workspace = true
tokio = { version = "1", features = ["full"] }

[features]
default          = []
local-embeddings = ["agent-core/local-embeddings"]
