[package]
name        = "billing-core"
description = "Billing provider abstraction, Lago client, quota checker, and plan catalog"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
common     = { path = "../common" }
agent-core = { path = "../agent-core" }
tokio.workspace      = true
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
async-trait.workspace = true
chrono.workspace     = true
uuid.workspace       = true
hmac.workspace       = true
sha2.workspace       = true
hex.workspace        = true
moka.workspace       = true
toml.workspace       = true
prometheus.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
