[package]
name        = "common"
description = "Shared utilities — config, error types, telemetry, MCP types, WASM loader"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
figment.workspace     = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
opentelemetry.workspace          = true
opentelemetry_sdk.workspace      = true
opentelemetry-otlp.workspace     = true
opentelemetry-prometheus.workspace = true
prometheus.workspace             = true
tracing-opentelemetry.workspace  = true
wasmtime.workspace    = true
wasmtime-wasi.workspace = true
reqwest.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
ulid.workspace        = true
bytes.workspace       = true
async-trait.workspace = true
utoipa.workspace      = true
axum.workspace        = true
