[package]
name = "jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common        = { path = "../common" }
billing-core  = { path = "../billing-core" }
agent-core    = { path = "../agent-core" }
rustfs-admin  = { path = "../rustfs-admin" }

tokio                = { workspace = true }
tokio-cron-scheduler = { workspace = true }
async-trait          = { workspace = true }
anyhow               = { workspace = true }
tracing              = { workspace = true }
uuid                 = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
chrono               = { workspace = true }
futures              = { workspace = true }
opentelemetry        = { workspace = true }
prometheus           = { workspace = true }
reqwest              = { workspace = true }
object_store.workspace = true

[dev-dependencies]
tokio = { workspace = true }
