[package]
name        = "rustfs-admin"
description = "RustFS admin client — declarative bucket/IAM/lifecycle/CORS bootstrap"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
tokio.workspace    = true
reqwest.workspace  = true
serde.workspace    = true
serde_json.workspace = true
anyhow.workspace   = true
thiserror.workspace = true
tracing.workspace  = true
chrono.workspace   = true
sha2.workspace     = true
hmac.workspace     = true
hex.workspace      = true
base64.workspace   = true
bytes.workspace    = true
aes-gcm.workspace  = true
argon2.workspace   = true
rand             = { version = "0.8" }
